# ddz_server

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: ci.yml
common/config/: config_loader.cpp  config_loader.h
common/util/: sha256.cpp  sha256.h  time_util.h
config/dev/: server.yaml
ddz/: README.md
ddz_client/: .env.development  README.md  index.html  package-lock.json  package.json
ddz_client/src/: App.vue  config.ts  style.css
ddz_client/src/components/: ActionBar.vue  CountdownLabel.vue  HandCards.vue  OpponentSeat.vue  ToastMessage.vue
ddz_client/src/net/: envelope.ts  kv.ts  wsClient.ts
ddz_client/src/protocol/: errorCode.ts  msgId.ts  types.ts
ddz_client/src/router/: index.ts
ddz_client/src/services/: authService.ts  gameService.ts
ddz_client/src/stores/: auth.ts  debug.ts  lobby.ts  room.ts  session.ts  settlement.ts
ddz_client/src/utils/: requestId.ts  time.ts
ddz_client/src/views/: DebugView.vue  LobbyView.vue  LoginView.vue  RoomView.vue  SettlementView.vue
ddz_server/: .gitignore  CMakeLists.txt  README.md
ddz_server/common/util/: kv_codec.h
ddz_server/config/dev/: gateway.yaml
ddz_server/gateway/: gateway_config.cpp  gateway_config.h  gateway_observability_service.cpp  gateway_observability_service.h  gateway_server.cpp  gateway_server.h  json_codec.cpp  json_codec.h  main.cpp  upstream_tcp_client.cpp  upstream_tcp_client.h
ddz_server/network/: dispatcher.cpp  dispatcher.h  packet.h  packet_codec.cpp  tcp_connection.h  tcp_server.h
ddz_server/runbooks/: p7_gateway_tls_proxy_runbook.md
ddz_server/server/: game_server.cpp  game_server.h
ddz_server/service/login/: auth_token_service.cpp  auth_token_service.h  login_service.cpp  login_service.h
ddz_server/service/match/: match_manager.h  match_service.cpp  match_service.h
ddz_server/service/observability/: observability_service.h
ddz_server/service/player/: player_manager.cpp
ddz_server/service/reconnect/: reconnect_service.cpp  reconnect_service.h
ddz_server/service/redis/: redis_optional_store.cpp
ddz_server/service/room/: room.h  room_manager.cpp  room_manager.h
ddz_server/service/rule/: ddz_rule_engine.h
ddz_server/service/session/: session_manager.h
ddz_server/service/settlement/: settlement_service.cpp
ddz_server/service/storage/: storage_models.h
ddz_server/service/storage/dao/: player_dao.cpp
ddz_server/service/storage/mysql/: mysql_connection_pool.cpp
ddz_server/tests/p0/: test_config_loader.cpp  test_dispatcher_heartbeat.cpp  test_gateway_config_loader.cpp  test_packet_codec.cpp
ddz_server/tests/p1/: test_auth_token_service.cpp  test_login_service.cpp
ddz_server/tests/p2/: test_match_service.cpp  test_room_manager.cpp
ddz_server/tests/p3/: test_reconnect_service.cpp  test_room_push_v2_snapshot.cpp
ddz_server/tests/p4/: test_forged_action_regression.cpp  test_room_action_state_machine.cpp  test_settlement_service.cpp  test_storage_service.cpp
ddz_server/tests/p6/: test_mysql_dao.cpp  test_redis_optional_store.cpp  test_settlement_transaction.cpp
ddz_server/tools/ci/: check.ps1
ddz_server/tools/perf/: run_stress.ps1
docker/mysql/init/: 001_schema.sql
log/: logger.cpp  logger.h
network/: packet_codec.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
runbooks/: p5_fault_drill_runbook.md  p5_perf_baseline.md
server/: game_server.cpp  game_server.h  main.cpp
service/login/: auth_token_service.cpp  auth_token_service.h  login_service.cpp  login_service.h
service/match/: match_manager.cpp  match_manager.h  match_service.cpp  match_service.h
service/observability/: observability_service.cpp
service/player/: player_manager.cpp  player_manager.h
service/reconnect/: reconnect_service.cpp  reconnect_service.h
service/redis/: redis_optional_store.cpp  redis_optional_store.h
service/room/: room.h  room_manager.cpp  room_manager.h
service/rule/: ddz_rule_engine.cpp  ddz_rule_engine.h
service/session/: session_manager.cpp  session_manager.h
service/settlement/: settlement_service.cpp  settlement_service.h
service/storage/: storage_service.cpp  storage_service.h
service/storage/dao/: coin_log_dao.cpp  coin_log_dao.h  game_record_dao.cpp  game_record_dao.h  player_dao.cpp  player_dao.h
service/storage/mysql/: mysql_connection_pool.cpp  mysql_connection_pool.h
tests/p0/: test_config_loader.cpp
tests/p1/: test_login_service.cpp  test_player_manager.cpp  test_session_manager.cpp
tests/p2/: test_match_manager.cpp  test_match_service.cpp
tests/p3/: test_offline_trustee_policy.cpp  test_reconnect_service.cpp  test_room_snapshot.cpp
tests/p4/: test_ddz_rule_engine.cpp  test_p4_full_game_e2e.cpp  test_settlement_service.cpp
tests/p5/: test_fault_drills.cpp  test_full_flow_integration.cpp  test_match_manager_stress.cpp  test_observability_service.cpp
tests/p6/: test_mysql_dao.cpp  test_redis_optional_store.cpp
